--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,9 @@
 task: DotNetCoreCLI@2
-  displayName: 'Build the project'
-  inputs:
-    command: 'build'
-    arguments: '--no-restore --configuration Release'
-    projects: '**/*.csproj'pool: MyAgentPool
+displayName: 'Build the project'
+inputs:
+  command: 'build'
+  arguments: '--no-restore --configuration Release'
+  projects: '**/*.csproj'
+pool: MyAgentPool
 steps:
 - bash: echo hello world
