--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,20 @@
-task: DotNetCoreCLI@2
-displayName: 'Build the project'
-inputs:
-  command: 'build'
-  arguments: '--no-restore --configuration Release'
-  projects: '**/*.csproj'
-pool: MyAgentPool
-steps:
-- bash: echo hello world
+pool:
+  name: MyAgentPool
+
+jobs:
+- job: Build
+  displayName: 'Build the project'
+  pool:
+    vmImage: 'windows-latest'
+
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '3.x'
+      installationPath: $(Agent.ToolsDirectory)/dotnet
+
+  - script: dotnet build --no-restore --configuration Release
+    displayName: 'Build the project'
+
+  - bash: echo hello world
